--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>Example</title>
     </head>
     <body>
-        <p>ian is cool<img src="/users/4435501/files/61108661/preview?verifier=tr841ubGYKMoMEeBxjl3TqTaI09U8huXZuJ0EIun" alt="uselessphrases_small.jpg" width="1200" height="1200" /></p>
+        <p>ian is cool<img src="https://uselessphrases.github.io/images/uselessphrases_small.jpg" width="1200" height="1200" /></p>
 <p>katharine is cool</p>
         <style>.embed-container {position: relative; padding-bottom: 80%; height: 0; max-width: 100%;} .embed-container iframe, .embed-container object, .embed-container iframe{position: absolute; top: 0; left: 0; width: 100%; height: 100%;} small{position: absolute; z-index: 40; bottom: 0; margin-bottom: -15px;}</style><div class="embed-container"><iframe width="500" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" title="useless phrases" src="//sjsugis.maps.arcgis.com/apps/Embed/index.html?webmap=8a3b9084483a4580822a34a2a551e37c&extent=-124.8775,32.4582,-76.3618,53.9718&zoom=true&previewImage=true&scale=true&search=true&searchextent=true&disable_scroll=true&theme=light"></iframe></div>
     </body>
