--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Example</title>
+        <title>Useless Phrases</title>
     </head>
     <body>
         <p>ian is cool<img src="https://uselessphrases.github.io/images/uselessphrases_small.jpg" width="1200" height="1200" /></p>
