--- a/secondpage.html
+++ b/secondpage.html
@@ -4,6 +4,6 @@
         <title>Second Page</title>
     </head>
     <body>
-        <p>Second Page Hello.</p>
+        <iframe src="https://storymaps.arcgis.com/stories/419416cfc61847a690822ca5aed00208" width="100%" height="500px" frameborder="0" allowfullscreen allow="geolocation"></iframe>
     </body>
 </html>
